# backend

./: .env  .env.local  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  rust-toolchain  userinfo.json
.github/workflows/: rust.yml
events/: comment_deleted.surql  delete_related_auth_on_user_deletion  new_login.surql  post_deleted.surql  post_updated.surql  relate_comment_to_post.surql  relate_user_to_comment.surql  relate_user_to_post.surql  relate_user_to_session.surql  session_deleted.surql  user_deleted.surql
helper-macros/: Cargo.toml
helper-macros/src/: generate_endpoint.rs  lib.rs
helper-macros/src/generate_crud/: crud_operation.rs  generate_crud_input.rs  mod.rs  test.rs
migrations/: 20240830_190041_added-first-providers.surql  20240830_223010_added-likes-table.surql  20240830_231849_added-likes_item-function.surql  20240831_001426_added-likes-count-function.surql  20240831_120813_added-post-likes-count-table.surql  20241023_194048_remove-email-index-on-session.surql  20241104_101038_user-change-picture-type-to-option.surql  20241106_142144_enable-graphql.surql  20241107_232211_secure-permissions-on-tables.surql  20241107_232647_add-per-user-authentication-method.surql  20241111_154704_set_url_safe_username_autogenerated_from_username.surql
migrations/down/: 20240830_190041_added-first-providers.surql  20240830_223010_added-likes-table.surql  20240830_231849_added-likes_item-function.surql  20240831_001426_added-likes-count-function.surql  20240831_120813_added-post-likes-count-table.surql
schemas/: auth_for.surql  authored.surql  comment.surql  comment_of.surql  commented.surql  file.surql  files_for.surql  mitigation.surql  post.surql  provider.surql  provider_config.surql  session.surql  session_of.surql  threat.surql  user.surql  user_auth.surql
src/: dto.rs  error.rs  graphql.rs  init_env.rs  logging.rs  logout.rs  main.rs  server_error.rs  spec.rs  state.rs  swagger.rs
src/auth/: logout.rs  mod.rs  session.rs
src/auth/oauth/: basic.rs  email.rs  error.rs  github.rs  google.rs  local.rs  logout.rs  mod.rs  register.rs  update.rs
src/auth/oauth/provider/: github.rs  google.rs  mod.rs
src/auth/oauth/scopes/: github.rs  google.rs  mod.rs
src/auth/users/: auth.rs  create.rs  mod.rs
src/auth/users/get/: mod.rs  utils.rs
src/config/: mod.rs
src/dto/: access_token_request.rs  chat_request.rs  embeddings.rs  file_upload_form.rs  mod.rs  oauth_callback.rs  token.rs  user_info.rs  user_registration_request.rs  user_update_request.rs
src/endpoints/: chat.rs  health.rs  mod.rs  not_found.rs  test.rs
src/endpoints/api/: chat.rs  mod.rs
src/endpoints/api/embeddings/: mod.rs  post.rs  search.rs
src/endpoints/api/files/: delete.rs  download.rs  get.rs  mod.rs  upload.rs
src/endpoints/api/oauth/: mod.rs  register.rs  revoke.rs  token.rs
src/endpoints/api/oauth/github/: callback.rs  login.rs  mod.rs
src/endpoints/api/oauth/google/: callback.rs  login.rs  mod.rs
src/endpoints/api/user/: delete.rs  get.rs  mod.rs  update.rs
src/extractors/: mod.rs
src/files/: mod.rs
src/graphql/: engine.rs  mod.rs
src/middlewares/: auth.rs  logger.rs
src/models/: access_token.rs  auth_for.rs  datetime.rs  embeddings.rs  file_metadata.rs  mod.rs  refresh_token.rs  session.rs  thing.rs  user_info.rs
src/server/: background_logger.rs  db.rs  migrations_runner.rs  mod.rs  rate_limiter.rs  test.rs
src/services/: files.rs  health.rs  mod.rs  token.rs
src/services/auth_for/: create.rs  mod.rs
src/services/embeddings/: add.rs  mod.rs  search.rs
src/services/embeddings/add/: mod.rs
src/services/embeddings/search/: mod.rs
src/services/files/: delete.rs  get.rs  insert.rs  mod.rs  state.rs
src/services/user/: create.rs  delete.rs  get.rs  mod.rs  update.rs  utils.rs
src/utils/: create_dto.rs  crud.rs  endpoint.rs  middleware.rs  mod.rs  oauth_client.rs  provider.rs  scope.rs
